* <span class="label label-info">Modified</span> The edit operation of a text field can now be triggered by the loss of focus on the text field.
* <span class="label label-info">Modified</span> The edit operation of a mono-line text field can now be triggered by pressing enter.
* <span class="label label-info">Modified</span> A selection variable is available in the hyperlink widget, it is equals to the value of the hyperlink instead of self.

h4. Developer-Visible Changes

* <span class="label label-info">Modified</span> The interface @org.eclipse.eef.core.api.EditingContextAdapter@ has now a new method @getEditingDomain()@ which is used to return an EditingDomain for the EEF runtime.
* <span class="label label-info">Modified</span> The constructor of the EEFLabelController now requires an EditingContextAdapter to run the expression of the widget actions.
* <span class="label label-success">Added</span> The class EEFStyleHelper is now API in order to help support style and conditional styles for custom widgets. Developers will need to override org.eclipse.eef.ide.ui.api.widgets.AbstractEEFWidgetLifecycleManager.getEEFStyleHelper() to provide their own implementation. The easiest way will need to extend the regular implementation and modify the three switchs to provide using the dedicated getters.


h3(#eef1.6.0). Changes in EEF 1.6.0

h4. User-Visible Changes

* <span class="label label-success">Added</span> The user interface has been recreated from scratch with a new runtime. As a result multiple changes can be visible in the user interface.

h4. Specifier-Visible Changes

* <span class="label label-success">Added</span> A brand new "language":language/overview.html is available to create your user interface. Have a look at the documentation for additional details.

h4. Developer-Visible Changes

* <span class="label label-success">Added</span> A brand new API is available to create your user interface. Have a look at the documentation for additional details.