@@ -20,6 +20,7 @@ h4. Specifier-Visible Changes
 * <span class="label label-info">Modified</span> The edit operation of a text field can now be triggered by the loss of focus on the text field.
 * <span class="label label-info">Modified</span> The edit operation of a mono-line text field can now be triggered by pressing enter.
 * <span class="label label-info">Modified</span> A selection variable is available in the hyperlink widget, it is equals to the value of the hyperlink instead of self.
+* <span class="label label-info">Modified</span> The dynamic mappings will take into account all the "if" blocks with a valid predicate expression and not only the first one.
 
 h4. Developer-Visible Changes
 
